[gd_scene load_steps=4 format=2]

[ext_resource path="res://HUD/DisplayCard.gd" type="Script" id=1]
[ext_resource path="res://HUD/Card.png" type="Texture" id=2]
[ext_resource path="res://Resources/small_font.tres" type="DynamicFont" id=3]

[node name="DisplayCard" type="TextureRect"]
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="TitleLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 31.0
margin_top = -1.0
margin_right = -2.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true

[node name="FlagLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -8.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )

[node name="DescriptionLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -60.0
margin_right = -1.0
margin_bottom = -1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
autowrap = true

[node name="CastTimeLabel" type="Label" parent="."]
margin_right = 32.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
